--- a/homeassistant/config/configuration.yaml
+++ b/homeassistant/config/configuration.yaml
@@ -9,3 +9,8 @@ frontend:
 automation: !include automations.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
+
+input_boolean:
+  test_switch:
+    name: Test_switch
+    initial: off
